Workaround for issue #566
Issue #566 is caused by the Darklaf theme, which uses internal
Swing APIs in its implementation (weisJ/darklaf#234). Starting with
OpenJDK 16, access to them is restricted unless
`--illegal-access=permit` is passed to the JVM upon
application start-up.